--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,14 @@
 body {
   background-color: aquamarine;
 }
+
+.carousel-image  {
+  opacity: 0.5;
+}
+
+.backdrop {
+  background-image: linear-gradient(180deg,#91e7db,#505a78);
+  height: 100%;
+  width: 100%;
+  opacity: 0.7;
+}
