--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -30,3 +30,15 @@ body {
 .box-shadow:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+
+.card-img {
+  width: 300px!important;
+}
+
+textarea {
+  resize: none!important;
+}
+
+.ts-change {
+  font-size: 200px;
+}
