displaying profile in my profile page

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -42,3 +42,12 @@ textarea {
 .ts-change {
   font-size: 200px;
 }
+
+.hero-image {
+  height: 38rem;
+}
+
+.profile-picture {
+  width: 5rem;
+  height: 5rem;
+}
