added blockmatrix startscreen

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -56,3 +56,14 @@ textarea {
   right: 2rem;
   bottom: 2rem;
 }
+
+a.btn {
+  -webkit-appearance: none;
+}
+
+.player {
+  height: 1rem;
+  width: 1rem;
+  left: 50%;
+  bottom: 0;
+}
