--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -72,7 +72,21 @@ a.btn {
 .player {
   height: 16px;
   width: 16px;
-  left: 50%;
+  left: 25%;
+  bottom: 0;
+}
+
+.player1 {
+  height: 16px;
+  width: 16px;
+  left: 75%;
+  bottom: 0;
+}
+
+.player2 {
+  height: 16px;
+  width: 16px;
+  left: 25%;
   bottom: 0;
 }
 
