--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -65,10 +65,18 @@ textarea {
   height: 5rem;
 }
 
-.edit-profile {
-  right: 2rem;
-  bottom: 2rem;
+.profile-image-container {
+  top: -100px;
 }
+
+.profile-card {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+// .edit-profile {
+//   right: 2rem;
+//   bottom: 2rem;
+// }
 
 a.btn {
   -webkit-appearance: none;
