--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -44,18 +44,19 @@ textarea {
 }
 
 .hero-image {
-  height: 100%;
+  height: 30rem;
   width: 100%;
   opacity: 0;
 }
 
 .overlay {
+  height: 30rem;
   background-color: rgba(0,0,0,0.7)
 }
 
 .hero-image-container {
   height: 30rem;
-  background-image: url(https://i.imgur.com/E7pGflz.jpg);
+  // background-image: url(https://i.imgur.com/E7pGflz.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -257,6 +258,10 @@ a.btn {
 .avatar-images {
   width: 100px;
   height: auto;
+}
+
+.Footer {
+  bottom: 0px;
 }
 
 @keyframes rotate1 {
