--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -270,6 +270,10 @@ a.btn {
   bottom: 0px;
 }
 
+.logo {
+  width: 3rem;
+}
+
 @keyframes rotate1 {
   0% {transform: rotateZ(0)}
   100% {transform: rotateZ(360deg)}
